--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: green;
+  margin: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  background-color: blue;
+}
+
+.header {
+  background-color: red;
 }
