--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,33 @@ body {
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  background-color: blue;
 }
 
 .header {
+  background-color: purple;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  width: 100%;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: red;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: green;
+  width: 100%;
 }
