--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,22 @@ body {
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
+h1 {
+  margin: 0px;
+}
+
+h2 {
+  margin: 0px;
+}
+
 .header {
   background-color: purple;
   display: flex;
+  align-items: center;
   justify-content: space-around;
   flex-direction: row;
   width: 100%;
+  height: 50px;
 }
 
 .main-container {
@@ -26,13 +36,30 @@ body {
 .button-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  width: 150px;
 }
 
 .tile {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   background-color: green;
   width: 100%;
+}
+
+.chart {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100px;
+}
+
+.tile-information {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
 }
