--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@ body {
   padding: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  background-color: red;
 }
 
 h1 {
@@ -19,14 +18,14 @@ h2 {
 }
 
 .header {
-  background-color: purple;
+  background-color: #eeeeee;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0px 40px;
   flex-direction: row;
   height: 50px;
-  width: 600px;
+  width: 1200px;
   margin: 20px 0px;
 }
 
@@ -35,23 +34,23 @@ h2 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: red;
+  background-color: #eeeeee;
 }
 
 .button-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 150px;
+  width: 450px;
 }
 
 .tile {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   background-color: green;
-  width: 280px;
+  width: 480px;
 }
 
 .chart {
@@ -70,11 +69,14 @@ h2 {
 }
 
 .tile-container {
-  width: 600px;
+  width: 1200px;
   display: grid;
   grid-template-columns: 50% 50%;
   row-gap: 20px;
   column-gap: 20px;
+  background-color: #ffffff;
+  margin: 0px 0px 10px 0px;
+  padding: 50px 100px;
 }
 
 .add-service {
@@ -86,5 +88,18 @@ h2 {
 }
 
 .button {
-  border-radius: 10%;
+  width: 200px;
+  border-radius: 8px;
+  color: white;
+  border: 0;
+  padding: 10px 45px;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tile-icon {
+  width: 50px;
+  height: 50px;
 }
