--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,15 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: #eeeeee;
+}
+
 body {
   margin: 0px;
   padding: 0px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  background-color: #eeeeee;
 }
 
 h1 {
@@ -40,6 +43,8 @@ p {
   align-items: center;
   justify-content: center;
   background-color: #eeeeee;
+  width: 100%;
+  height: 100%;
 }
 
 .button-container {
@@ -125,6 +130,8 @@ p {
 
 .project-title {
   font-size: 20px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .tile:hover {
@@ -140,7 +147,9 @@ p {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-color: #eeeeee;
 }
+
 .waiting-text {
   margin: 0px 20px 0px 0px;
 }
